--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="container">
+        <h2>Coding Quiz Challenge</h2>
+        <h3>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</h3>
         <div id="question-container" class="hide">
         <div id= "question">Question</div>
         <div id= "answer-buttons" class="btn-grid">
@@ -20,10 +22,11 @@
             </div>
         </div>
         <div class="controls">
+            <h3>Seconds left: <span id="time-left">60</span></h3>
             <button id="start-btn" class="start-btn btn">Start</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
-    
-        </div>
+            <button id="highscores-btn" class="highscore btn hide">High Scores</button>
+     </div>
     </div>
 </body>
 </html>
