--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h2>Coding Quiz Challenge</h2>
-        <h3>Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</h3>
+        <div id= "instructions" >Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your scoretime by ten seconds!</div>
         <div id="question-container" class="hide">
         <div id= "question">Question</div>
         <div id= "answer-buttons" class="btn-grid">
@@ -22,10 +22,10 @@
             </div>
         </div>
         <div class="controls">
-            <h3>Seconds left: <span id="time-left">60</span></h3>
+             <h3>Seconds left: <span id="time-left">60</span></h3>
             <button id="start-btn" class="start-btn btn">Start</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
-            <button id="highscores-btn" class="highscore btn hide">High Scores</button>
+        </div>
      </div>
     </div>
 </body>
