--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="style2.css" rel="stylesheet">
-    <script defer src="script3.js"></script>
+    <link href="style.css" rel="stylesheet">
+    <script defer src="script.js"></script>
     <title>Quiz App</title>
 </head>
 
