--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button id="start-btn" class="start-btn btn">Start</button>
             <button id="next-btn" class="next-btn btn hide">Next</button>
         </div>
-        <div id="end game">
+        <div id="end-game">
             <input type="text" id="input" class="hide" />
         </div>
     </div>
